examples/test/testpolicy5616.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5616
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key13: value35
      key21: value15
      key2: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value38
          key48: value10
      podSelector:
        matchLabels:
          key45: value7
          key16: value49
          key42: value44
